--- a/dashboard/templates/dashboard/add_dashboard.html
+++ b/dashboard/templates/dashboard/add_dashboard.html
@@ -51,7 +51,7 @@
                             </a>
                             <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="layout-static.html">Consumo mensal</a>
+                                    <a class="nav-link" href="{% url "consumo_mensal"%}">Consumo mensal</a>
                                     <a class="nav-link" href="layout-sidenav-light.html">Consumo anual</a>
                                     <a class="nav-link" href="layout-sidenav-light.html">Consumo geral</a>
                                 </nav>
@@ -80,11 +80,7 @@
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-        <script src="js/scripts.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
-        <script src="assets/demo/chart-area-demo.js"></script>
-        <script src="assets/demo/chart-bar-demo.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" crossorigin="anonymous"></script>
-        <script src="js/datatables-simple-demo.js"></script>
     </body>
 </html>
