--- a/dashboard/templates/dashboard/base_dashboard.html
+++ b/dashboard/templates/dashboard/base_dashboard.html
@@ -72,7 +72,9 @@
             </div>
             <div id="layoutSidenav_content">
                 <main>
-                    {%block form%}{%endblock%}
+                    <form method ="post">
+                        {%block form%}{%endblock%}
+                    </form>
                 </main>
             </div>
         </div>
