--- a/dashboard/templates/dashboard/update_dashboard.html
+++ b/dashboard/templates/dashboard/update_dashboard.html
@@ -3,6 +3,6 @@
 {% load crispy_forms_tags %}
 
 {%block form%}
-    {% csrf_token %}{{form|crispy}}
-    <button type="submit" class="btn btn-success">Adicionar</button>
+    {% csrf_token %}{{form}}
+    <button type="submit" class="btn btn-success">Atualizar</button>
 {%endblock%}
