--- a/dashboard/templates/dashboard/update_dashboard.html
+++ b/dashboard/templates/dashboard/update_dashboard.html
@@ -5,6 +5,6 @@
 {%block form%}
 <form method="post">
     {% csrf_token %}{{form|crispy}}
-    <button type="submit" class="btn btn-success">Adicionar</button>
-</form>
+    <button type="submit" class="btn btn-success">Atualizar</button>
+</post>
 {%endblock%}
