--- a/dashboard/templates/dashboard/consumo_mensal.html
+++ b/dashboard/templates/dashboard/consumo_mensal.html
@@ -13,7 +13,7 @@
       data: {
           labels: {{labels|safe}},
           datasets: [{
-              label: 'Potência contratada',
+              label: 'Demanda medida (kWh)',
               data: {{data|safe}},
               fill: false,
               borderColor: [
