--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -13,7 +13,7 @@
           <th>Subgrupo</th>
           <th>Energia utilizada(p)</th>
           <th>Energia utilizada(fp)</th>
-          <th>Potência contratada</th>
+          <th>Demanda medida</th>
           <th>Data</th>
           <th></th>
         </tr>
