--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -66,7 +66,7 @@
 
 <div class="container">
    <div class="row">
-      <div class="col-md-5">
+      <div class="col-md-3">
          <div class="titlepage">
             <h2>INTEGRANTES</h2>
                <p>Narciso - Scrum Master</p>
@@ -78,11 +78,24 @@
                <p>Proença - Developer</p>
          </div>
       </div>
-      <div class="col-md-7">
+      <div class="col-md-3">
          <div class="about_img">
-            <figure><img src="{%static 'img/Narciso.jpeg'%}" style="max-width:20%;border:2px solid black;" ></figure>
-            <figure><img src="{%static 'img/Dalcin.jpg'%}" style="max-width:20%;border:2px solid black;" ><figure>
-            <figure><img src="{%static 'img/Antunes.jpg'%}" style="max-width:25%;border:2px solid black;" ></figure>           
+            <figure><img src="{%static 'img/Narciso.jpeg'%}" style="max-width:25%;border:2px solid black;"> Narciso </figure>
+            <figure><img src="{%static 'img/Dalcin.jpg'%}" style="max-width:25%;border:2px solid black;" > Dalcin <figure>
+            <br/>
+            <figure><img src="{%static 'img/antunes.jpg'%}" style="max-width:25%;border:2px solid black;" > Antunes </figure>           
+         </div>
+      </div>
+      <div class="col-md-3">
+         <div class="about_img">
+            <figure><img src="{%static 'img/levy.jpeg'%}" style="max-width:25%;border:2px solid black;" > Levy </figure>
+            <figure><img src="{%static 'img/proença.jpeg'%}" style="max-width:25%;border:2px solid black;" > Proença <figure>
+            <br/>
+            <figure><img src="{%static 'img/campanha.jpg'%}" style="max-width:25%;border:2px solid black;" > Campanha </figure>          </div>
+      </div>
+      <div class="col-md-3">
+         <div class="about_img">
+            <figure><img src="{%static 'img/vanzan.jpeg'%}" style="max-width:25%;border:2px solid black;" > Vanzan </figure>          
          </div>
       </div>
    </div>
